--- a/Frontend/src/app/home/home.component.css
+++ b/Frontend/src/app/home/home.component.css
@@ -87,6 +87,7 @@
     width: 863px;
     position: fixed;
     margin-top: 70px;
+    overflow-y: auto; /* Dikey kaydırma çubuğunu otomatik olarak göster */
 }
 
 .chat-content-message{
