--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center" style="margin-top: 50px; margin-bottom: 50px; margin-top: 150px;">
   <div style="width: 400px">
-    <div class="card" style="border-radius: 0;">
+    <div class="card" style="border-radius: 10px; background-color: rgba(3, 6, 20, 0.8);">
       <div class="mt-4">
-        <h2 class="text-center">Giriş Yap</h2>
+        <h2 class="text-center" style="color: white;">Giriş Yap</h2>
       </div>
       <div class="card-body">
         <form
@@ -11,10 +11,10 @@
           autocomplete="off"
         >
           <div class="form-group">
-            <label for="email" class="form-label">Mail Adresi</label>
+            <label for="email" class="form-label" style="color: white;">Mail Adresi</label>
             <input
               class="form-control mt-2"
-              style="border-color: #212529"
+              style="border-color: #212529; color: white; background-color: rgba(105, 108, 128, 0.8);"
               type="email"
               ngModel
               name="email"
@@ -22,36 +22,33 @@
               required
               email
               #email
-              style="border-radius: 0;"
             />
             <div class="invalid-feedback">Geçerli bir mail adresi girin!</div>
           </div>
           <div class="form-group mt-3">
-            <label for="password" class="form-label">Şifre</label>
+            <label for="password" style="color: white;" class="form-label">Şifre</label>
             <input
               class="form-control mt-2"
-              style="border-color: #212529"
+              style="border-color: #212529; color: white; background-color: rgba(105, 108, 128, 0.8);"
               type="password"
               ngModel
               name="password"
               id="password"
               required
               #password
-              style="border-radius: 0;"
             />
             <div class="invalid-feedback">Şifre alanı boş olamaz!</div>
           </div>
           <div class="form-group mt-2">
             <button
               [disabled]="!loginForm.valid"
-              class="btn btn-dark w-100 mt-3"
-              style="border-radius: 0;"
+              class="btn btn-light w-100 mt-3"
             >
               Giriş Yap
             </button>
             <a
               routerLink="/register"
-              style="float: right; margin-top: 10px; color: #212529;"
+              style="float: right; margin-top: 10px; color: white; "
               >Kayıt Ol</a
             >
           </div>
