--- a/Frontend/src/app/register/register.component.html
+++ b/Frontend/src/app/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-center" style="margin-top: 50px; margin-bottom: 50px; margin-top: 150px;">
   <div style="width: 400px">
-    <div class="card"  style="border-radius: 0;">
+    <div class="card"  style="border-radius: 10px; background-color: rgba(3, 6, 20, 0.8);">
       <div class="mt-4">
-        <h2 class="text-center">Kayıt Ol</h2>
+        <h2 class="text-center" style="color: white;">Kayıt Ol</h2>
       </div>
       <div class="card-body">
         <form
@@ -11,55 +11,64 @@
           autocomplete="off"
         >
           <div class="form-group">
-            <label for="name">Ad Soyad</label>
+            <label for="name" style="color: white;">Ad Soyad</label>
             <input
               class="form-control mt-2"
-              style="border-color: #212529"
+              style="border-color: #212529; color: white; background-color: rgba(105, 108, 128, 0.8);"
               type="text"
               [(ngModel)]="model.name"
               name="name"
               id="name"
               required
               #name
-              style="border-radius: 0;"
             />
             <div class="invalid-feedback">Ad Soyad alanı boş olamaz!</div>
           </div>
           <div class="form-group mt-3">
-            <label for="email">Mail Adresi</label>
+            <label for="email" style="color: white;">Mail Adresi</label>
             <input
               class="form-control mt-2"
-              style="border-color: #212529"
+              style="border-color: #212529; color: white; background-color: rgba(105, 108, 128, 0.8);"
               type="email"
               [(ngModel)]="model.email"
               name="email"
               id="email"
               required
               #email
-              style="border-radius: 0;"
             />
             <div class="invalid-feedback">Geçerli bir mail adresi girin!</div>
           </div>
           <div class="form-group mt-3">
-            <label for="password">Şifre</label>
+            <label for="password" style="color: white;">Şifre</label>
             <input
               class="form-control mt-2"
-              style="border-color: #212529"
+              style="border-color: #212529; color: white; background-color: rgba(105, 108, 128, 0.8);"
               type="password"
               name="password"
               [(ngModel)]="model.password"
               id="password"
               required
               #password
-              style="border-radius: 0;"
             />
             <div class="invalid-feedback">Şifre alanı boş olamaz!</div>
           </div>
           <div class="form-group mt-2">
-            <button [disabled]="!registerForm.valid" class="btn btn-dark w-100 mt-3"  style="border-radius: 0;">Kayıt Ol</button>
+            <label for="images" style="color: white;">Kullanıcı Resimi</label>
+            <input
+              type="file"
+              style="border-color: #212529; color: white; background-color: rgba(105, 108, 128, 0.8);"
+              name="images"
+              id="images"
+              ngModel
+              class="form-control mt-2"
+              (change)="onFileSelected($event)"
+            />
+          </div>
+          <div class="form-group mt-2">
+            <button [disabled]="!registerForm.valid" class="btn btn-light w-100 mt-3"  style="border-radius: 0;">Kayıt Ol</button>
             <a
               routerLink="/login"
-              style="float: right; margin-top: 10px; color: #212529"
+              style="float: right; margin-top: 10px; color: white"
               >Giriş Yap</a
             >
           </div>
